# promptbuf

./: .gitignore  README.md
core/: CMakeLists.txt  README.md
core/src/: main.cpp  promptbuf.cpp  promptbuf.hpp
marketing/: components.json  index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  tsconfig.json  vite.config.ts
marketing/src/: App.tsx  index.css
marketing/src/components/: Content.tsx  Sidebar.tsx  Tokenizer.tsx
marketing/src/components/ui/: select.tsx  switch.tsx  textarea.tsx
python/: Makefile  requirements.txt
python/src/: main.py  promptbuf.py
typescript/: README.md  index.html  jest.config.js  package-lock.json  package.json  tsconfig.json  webpack.config.js
typescript/src/: index.ts  promptbuf.ts
typescript/src/cpp/: binding.cpp
typescript/src/src/: index.d.ts
typescript/src/ts/: index.ts  index2.ts  promptbuf.ts  promptbuf2.ts  schemas.json
typescript/tests/: index.test.ts  promptbuf.test.ts
